Microformat up the rating cell renderer and fix the styles so it is aligned left by default.
svn commit r68470

--- a/www/styles/swat-table-view.css
+++ b/www/styles/swat-table-view.css
@@ -53,6 +53,11 @@ table.swat-table-view th.swat-money-cell-renderer {
 	text-align: right;
 }
 
+table.swat-table-view td.swat-rating-cell-renderer,
+table.swat-table-view th.swat-rating-cell-renderer {
+	text-align: left;
+}
+
 /* Error styling */
 
 .swat-table-view tbody tr.swat-error {
